-
Bug
-
Resolution: Fixed
-
P4
-
19, 20
-
b17
-
windows_10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8313783 | 17.0.10-oracle | Renjith Kannath Pariyangad | P4 | Resolved | Fixed | b01 |
| JDK-8316722 | 17.0.10 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8314816 | 11.0.22-oracle | Renjith Kannath Pariyangad | P4 | Resolved | Fixed | b01 |
| JDK-8317026 | 11.0.22 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8316347 | 8u401 | Renjith Kannath Pariyangad | P4 | Resolved | Fixed | b01 |
- backported by
-
JDK-8313783 [windows] Actual and Preferred Size of AWT Non-resizable frame are different
-
- Resolved
-
-
JDK-8314816 [windows] Actual and Preferred Size of AWT Non-resizable frame are different
-
- Resolved
-
-
JDK-8316347 [windows] Actual and Preferred Size of AWT Non-resizable frame are different
-
- Resolved
-
-
JDK-8316722 [windows] Actual and Preferred Size of AWT Non-resizable frame are different
-
- Resolved
-
-
JDK-8317026 [windows] Actual and Preferred Size of AWT Non-resizable frame are different
-
- Resolved
-
- relates to
-
JDK-8293968 [Windows] Wrapped Menu on AWT Frame causes clipping of client area
-
- Closed
-
-
JDK-8265586 [windows] last button is not shown in AWT Frame with BorderLayout and MenuBar set.
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/2513c89a
-
Commit
openjdk/jdk17u-dev/06756c49
-
Commit
openjdk/jdk/eca9749d
-
Review
openjdk/jdk11u-dev/2139
-
Review
openjdk/jdk17u-dev/1754
-
Review
openjdk/jdk/9954