8288325: [windows] Actual and Preferred Size of AWT Non-resizable frame are different

Backport-of: eca9749da01d732033c07f2bbb38800a9d80f18d